<resources>
    <string name="app_name">Smart Tour</string>

    <string name="title_activity_group_maps">Map</string>
    <string name="user">user</string>
    <string name="back_create_group">kembali</string>
    <string name="register_name">Nama</string>
    <string name="phone_number_register">No HP</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="upload_photo_register">upload foto</string>
    <string name="back_register">kembali</string>
    <string name="register">Register</string>
    <string name="smart_tour">Smart Tour</string>
    <string name="the_track_of_your_choice">The Track Of Your Choice</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Belum Punya Akun?</string>
    <string name="click_here">Klik disini</string>
    <string name="rundown_tour">Rundown Tour</string>
    <string name="upload_foto_rundown">upload foto rundown</string>
    <string name="save">Simpan</string>
    <string name="title">Judul</string>
    <string name="location">Lokasi</string>
    <string name="password_list_group">Password :</string>
    <string name="join_list_group">MASUK</string>
    <string name="name_list_friends">Nama</string>
    <string name="phone_numbers_friends">NO HP</string>
    <string name="user_group_activity">Chanly Septian</string>
    <string name="phone_number_groupActivity">081220487230</string>
    <string name="phoneNumbers_group">081220487230</string>
    <string name="group_friends">Teman Group</string>
    <string name="location_friendsgroup">Lokasi Group</string>
    <string name="friendsgroup_name">Nama Group</string>
    <string name="back_edit_profile">Kembali</string>
    <string name="upload_foto_EditProfile">upload foto</string>
    <string name="password_EditProfile">Password</string>
    <string name="email_edit_profile">Email</string>
    <string name="phone_numbers_editProfile">No HP</string>
    <string name="name_editProfile">Nama</string>
    <string name="name_create_group">Nama Group</string>
    <string name="location_createGroup">Lokasi</string>
    <string name="password_create_group">Password</string>
    <string name="upload_photos_createGroup">upload gambar</string>
    <string name="upload_rundown_createGroup">Upload rundown</string>
    <string name="create_group">Buat Group</string>
    <string name="group_name_hint">Nama Group</string>
    <string name="location_hint">lokasi wisata</string>
    <string name="password_createGroup_hint">password</string>
    <string name="change_name_hint">Ubah Nama</string>
    <string name="change_phoneNumbers_hint">Ubah Nomor HP</string>
    <string name="change_email_hint">Ubah email</string>
    <string name="change_password_hint">Ubah Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="group_tour_text">Group Tour</string>
    <string name="email_hint">Email</string>
    <string name="password_login_hint">Password</string>
    <string name="register_name_hint">Nama</string>
    <string name="phoneNumbers_hint">08xxx</string>
    <string name="gmail_com_hint">gmail.com</string>
    <string name="password_register_hint">password</string>
    <string name="chat_listFriends">CHAT</string>
    <string name="view_location_friends">Lihat lokasi</string>
    <string name="masuk_group">Masuk Group</string>
    <string name="group_tour">Group Tour</string>
    <string name="pencarian_teman">pencarian teman</string>
    <string name="pencarian_group">pencarian group</string>
</resources>
