<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#4DB6AC"
    tools:context="org.d3ifcool.smarttour.LoginActivity">

<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/smart_tour"
        android:textSize="35sp"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/the_track_of_your_choice"
        android:textSize="15sp"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">

    <EditText
        android:layout_margin="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:background="@android:color/white"
        android:id="@+id/email_editText"
        android:hint="@string/email_hint"
        android:padding="18dp"/>

    <EditText
        android:layout_margin="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/pass_editText"
        android:inputType="textPassword"
        android:hint="@string/password_login_hint"
        android:background="@android:color/white"
        android:padding="15dp"
        />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:background="#26A69A"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/not_registered_yet"
            android:textSize="15sp"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/click_here"
            android:textSize="15sp"
            android:textColor="#0000ff"
            android:id="@+id/btnRegister"
            android:onClick="register"/>

</LinearLayout>
</ScrollView>
