<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.smarttour.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textSize="17sp"
                    android:text="@string/register_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textSize="17sp"
                    android:text="@string/phone_number_register"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textSize="17sp"
                    android:text="@string/email_register"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textSize="17sp"
                    android:text="@string/password_register"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:background="@android:color/white"
                    android:id="@+id/nama_editText"
                    android:hint="@string/register_name_hint"
                    android:padding="15dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:background="@android:color/white"
                    android:id="@+id/hp_editText"
                    android:hint="@string/phoneNumbers_hint"
                    android:padding="15dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:background="@android:color/white"
                    android:id="@+id/email_editText"
                    android:hint="@string/gmail_com_hint"
                    android:padding="15dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:background="@android:color/white"
                    android:id="@+id/pass_editText"
                    android:hint="@string/password_register_hint"
                    android:padding="15dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:id="@+id/foto_imgView"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="noFunction"
                android:id="@+id/cariGambar_imgView"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_photo_register"
                android:textColor="#ffffff"
                android:background="#26A69A"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="495dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/register_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="#26A69A"
            android:layout_weight="1"
            android:text="@string/register"
            android:textSize="12sp"
            android:onClick="register"/>

    </LinearLayout>
</RelativeLayout>
</ScrollView>