<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.smarttour.CreateGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/name_create_group"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/location_createGroup"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/password_create_group"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:background="@android:color/white"
                    android:id="@+id/nama_editText"
                    android:hint="@string/group_name_hint"
                    android:padding="15dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:background="@android:color/white"
                    android:id="@+id/lokasi_editText"
                    android:hint="@string/location_hint"
                    android:padding="15dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:background="@android:color/white"
                    android:id="@+id/pass_editText"
                    android:hint="@string/password_createGroup_hint"
                    android:padding="15dp" />
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="15dp">

        <ImageView
            android:id="@+id/foto_imgView"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:background="@drawable/ancol2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cariGambar_imgView"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_photos_createGroup"
                android:textColor="#ffffff"
                android:background="#26A69A"
                android:textSize="12sp"
                android:onClick="noFunction"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_rundown_createGroup"
                android:textColor="#ffffff"
                android:background="#26A69A"
                android:textSize="12sp"
                android:onClick="noFunction"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="495dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

            <Button
                android:id="@+id/buatGroup_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_group"
                android:background="#26A69A"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:onClick="createGroup"
                android:layout_marginLeft="10dp"/>

    </LinearLayout>
</RelativeLayout>
</ScrollView>