<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foto_imgView"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:background="@android:color/darker_gray"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nama_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_list_friends"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/kontak_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_numbers_friends"
                android:textSize="20sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <Button
            android:id="@+id/button_chat"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_gravity="center"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/chat_listFriends"
            android:textColor="#ffffff"
            android:background="#26A69A"
            android:layout_marginLeft="90dp"/>

        <Button
            android:id="@+id/button_maps"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_gravity="center"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/view_location_friends"
            android:textColor="#ffffff"
            android:background="#26A69A"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
</LinearLayout>