<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foto_imgView"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:background="@android:color/darker_gray"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nama_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/lokasi_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/password_list_group"/>

                <EditText
                    android:id="@+id/pass_editText"
                    android:inputType="textPassword"
                    android:background="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:maxLines="1"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
    <Button
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/passBtn_Btn"
        android:layout_gravity="center"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/join_list_group"
        android:onClick="verifyPass"
        android:textColor="#ffffff"
        android:background="#26A69A"/>

</LinearLayout>