<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/group_activity"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:background="#26A69A"
            android:padding="4dp">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/foto_imgView"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/chanly" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nama_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/user_group_activity"
                        android:textColor="#ffffff"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/hp_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number_groupActivity"
                        android:textColor="#ffffff"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AA4DB6AC">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_profile"
                android:textSize="12sp"
                android:textColor="#ffffff"
                android:background="#26A69A"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:background="#26A69A"
                android:layout_weight="1"
                android:text="@string/masuk_group"
                android:textSize="12sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="336dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#E8F5E9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_tour"
                android:textAlignment="center"
                android:textColor="#26A69A"
                android:textSize="32sp" />

            <ListView
                android:id="@+id/group_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:background="@drawable/plus"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_margin="20dp"
        android:onClick="toCreateGroup" />
</RelativeLayout>