<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="org.d3ifcool.smarttour.FriendsGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <ImageView
                android:id="@+id/foto_imgView"
                android:scaleType="centerCrop"
                android:src="@drawable/ancol2"
                android:layout_width="72dp"
                android:layout_height="72dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/nama_textView"
            android:textSize="18sp"
            android:text="@string/friendsgroup_name"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/lokasi_textView"
            android:fontFamily="sans-serif-light"
            android:textStyle=""
            android:textSize="14sp"
            android:text="@string/location_friendsgroup"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_friends"
            android:textAlignment="center"
            android:textColor="#26A69A"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/search"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:hint="@string/pencarian_teman"
                android:padding="5dp"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/group_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_plusdua"
        android:onClick="toMaps"/>

</RelativeLayout>